feat: Add AppDropdownField component for enhanced dropdown functionality
feat: Enhance PrimaryTextFormField with customizable borders and focus handling

feat: Introduce AppMaterial component for consistent material design styling

fix: Update EmptyState icon for better visual representation

feat: Add nullable string extensions for improved string handling

feat: Implement AppUser model for user data management

style: Update AppColors with new color definitions for better UI consistency

feat: Create AppConstants for centralized key management

feat: Implement AppDialogs for standardized dialog presentation

style: Refactor AppTheme for improved theming and consistency

refactor: Clean up Utils class by removing commented code

feat: Add AuthViewModel for user authentication management

fix: Update CGPAViewModel to use AppConstants for key management

refactor: Revamp CourseCard to utilize new components and improve UI

feat: Update HomePage to greet user by name upon login

feat: Implement login functionality in LoginPage with error handling

style: Update SemesterDetailsPage floating action button icon

fix: Update SplashScreen to use AppStrings for app name display

chore: Update dependencies in pubspec.yaml and pubspec.lock

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.5+1
   shared_preferences: ^2.2.3
   url_launcher: ^6.3.0
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
