feat: Refactor home page and onboarding flow
- Updated HomePage to include GPA trajectory and improved UI elements.
- Removed the deprecated LoginPage and replaced it with a new onboarding flow.
- Added GradingSystemView, LoginView, SummaryView, and WalkThroughScreen components for a streamlined onboarding experience.
- Enhanced SemesterDetailsPage with a new layout and added functionality for course management.
- Updated SplashScreen for a more modern look and feel.
- Added new dependencies: dotted_line, flutter_animate, and fl_chart for enhanced UI features.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   shared_preferences: ^2.2.3
   url_launcher: ^6.3.0
   dropdown_button2: ^2.3.9
+  dotted_line: ^3.2.3
+  flutter_animate: ^4.5.2
+  fl_chart: ^0.66.0
 
 dev_dependencies:
   flutter_test:
