--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_animate: ^4.5.2
   fl_chart: ^0.66.0
   flutter_svg: ^2.0.10+1
+  iconsax:
+  get_it: ^9.2.0
 
 dev_dependencies:
   flutter_test:
