--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   flutter_svg: ^2.0.10+1
   iconsax:
   get_it: ^9.2.0
+  rename: ^3.1.0
+  firebase_core: ^2.27.0
 
 dev_dependencies:
   flutter_test:
