--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_auth: ^4.17.8
   cloud_firestore: ^4.15.8
   google_sign_in: ^6.2.1
+  fluttertoast: ^8.2.5
 
 dev_dependencies:
   flutter_test:
