--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   cloud_firestore: ^4.15.8
   google_sign_in: ^6.2.1
   fluttertoast: ^8.2.5
+  cached_network_image: ^3.3.1
+  image_picker: ^1.0.8
 
 dev_dependencies:
   flutter_test:
