--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   fluttertoast: ^8.2.5
   cached_network_image: ^3.3.1
   image_picker: ^1.0.8
+  image_cropper: ^5.0.1
 
 dev_dependencies:
   flutter_test:
