--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   rename: ^3.1.0
   firebase_core: ^2.27.0
   firebase_auth: ^4.17.8
+  firebase_analytics: ^10.8.9
   cloud_firestore: ^4.15.8
   google_sign_in: ^6.2.1
   fluttertoast: ^8.2.5
